# eqrs

./: Cargo.toml  README.md
src/: calculate.rs  eval.rs  helpers.rs  lib.rs  main.rs  post_process.rs  variable.rs
src/parse/: mod.rs  operator.rs  post_process.rs
src/tokenize/: function.rs  mod.rs  operator.rs  token.rs
